--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:latest
 WORKDIR /app
-COPY ./receiver.py /app/receiver.py
+COPY ./ciscopi.py /app/ciscopi.py
 COPY ./requirements.txt /app/requirements.txt
 RUN pip install -r requirements.txt
 RUN python3 -m pip install pipenv && \
     pip install --upgrade pip && \
     apt-get update
 RUN pipenv install
-CMD ["python3", "receiver.py"]
+CMD ["python3", "ciscopi.py"]
