--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,3 +1,4 @@
-opentelemetry-sdk==1.22.0
-opentelemetry-exporter-otlp-proto-grpc==1.22.0
-netmiko==4.3.0
+opentelemetry.sdk==1.23.0
+opentelemetry.api==1.23.0
+requests==2.31.0
+opentelemetry-exporter-otlp-proto-grpc==1.23.0
